# painkiller-ai

./: .env  README.md  docker-compose.yml
jonas/: .coveragerc  Makefile  pyproject.toml
judas/: .coveragerc  .env  Makefile  README.md  dockerfile  pyproject.toml
judas/judas/: config.py  main.py
judas/judas/bussiness/: __init__.py
judas/judas/presentation/: routes.py  schemas.py
judas/judas/services/: filesystem.py
judas/tests/: test_bussiness.py
measurement/: .coveragerc  Makefile  README.md  dockerfile  pyproject.toml
measurement/measurement/: main.py
measurement/measurement/bussiness/: __init__.py
measurement/measurement/exception/: __init__.py
measurement/src/: main.py
measurement/src/bussiness/: __init__.py
measurement/tests/: test_bussiness.py
painkiler/: README.md
painkiller/: .coveragerc  .env  Makefile  README.md  pyproject.toml
painkiller/painkiller/: __init__.py  __main__.py
painkiller/painkiller/repository/: __init__.py  condition.py  measurement.py  patient.py
painkiller/painkiller/tables/: __init__.py  condition.py  patient.py
painkiller/src/: __init__.py  __main__.py  config.py
painkiller/src/files/: painkiller-0.1.0-py3-none-any.whl
painkiller/src/repository/: __init__.py  patient.py
painkiller/src/tables/: __init__.py  condition.py  patient.py
painkiller/tests/: test_condition_repository copy.py  test_measurement_repository.py  test_patient_repository.py  test_repository.py
patient/: .coveragerc  README.md  dockerfile  pyproject.toml
patient/patient/: main.py
patient/src/: main.py
patient/tests/: test_bussiness.py
scripts/: populate.sql
(+10 files in other folders)
