[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "painkiller-judas"
version = "0.1.0"
dependencies = [
    "painkiller-ai==0.3.19",
    "fastapi==0.100.0",
    "uvicorn==0.22.0",
    "minio==7.1.15",
    "scikit-learn==1.3.0",
]
authors = [
  { name="Rato Pythonista", email="ratopythonista@gmail.com" },
]
description = "Painkiller Judas Service"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ratopythonista/painkiller-ai"
"Bug Tracker" = "https://github.com/ratopythonista/painkiller-ai/issues"