[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "painkiller-ai"
version = "0.3.10"
dependencies = [
    "loguru==0.7.0",
    "sqlalchemy==2.0.18",
    "python-dotenv==1.0.0",
    "psycopg2-binary==2.9.6"
]
authors = [
  { name="Rato Pythonista", email="ratopythonista@gmail.com" },
]
description = "Painkiller tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ratopythonista/painkiller-ai"
"Bug Tracker" = "https://github.com/ratopythonista/painkiller-ai/issues"